<resources>
    <string name="app_name">IIUM Chat Room</string>
    <string name="title">IIUM Chat Room</string>
    <string name="author_name">By Farooq Ezhar</string>
    <string name="author_url">www.farooqezhar.com</string>
    <string name="enter_name">Enter your name</string>
    <string name="btn_join">Log in with Facebook</string>
    <string name="btn_send">Send</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="action_settings">Log out</string>
</resources>
